# renfield

./: .env.example  .gitignore  BUGFIXES.md  CLAUDE.md  CONTRIBUTING.md  DEBUGGING.md  EXTERNAL_OLLAMA.md  FEATURES.md  GITHUB_DEPLOYMENT.md  INSTALLATION.md  INTENT_RECOGNITION_FIX.md  JSON_PARSING_FIX.md  LICENSE  MAC_AUDIO_DEBUG.md  Makefile  OUTPUT_ROUTING.md  PLUGIN_SYSTEM_IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  QUICKSTART.md  RAG_INTEGRATION_BRIEFING.md  README.de.md  README.md  README_PIPER.md  TRACING_GUIDE.md  UPDATE_v1.1.md  UPDATE_v1.2.0.md  VAD_FEATURE.md  VOICE_INPUT_FIX.md  WEBSOCKET_FIX.md  debug.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod-cpu.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  quick-update.sh  start.sh  test_media_player.py  (+2 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  pr-check.yml  release.yml
backend/: CONVERSATION_API.md  Dockerfile  Dockerfile.gpu  alembic.ini  main.py  requirements.txt  test_performance.py
backend/alembic/: env.py
backend/integrations/: frigate.py  homeassistant.py
backend/models/: database.py  websocket_messages.py
backend/services/: audio_output_service.py  audio_preprocessor.py  device_manager.py  intent_handler.py  ollama_service.py  room_service.py  satellite_manager.py  speaker_service.py  wakeword_service.py  websocket_auth.py  whisper_service.py
backend/utils/: config.py
config/: agent_roles.yaml  calendar_accounts.yaml  import_rules.yaml  kg_scopes.yaml  mail_accounts.yaml  mcp_servers.yaml  nginx-dev.conf  nginx.conf
config/n8n-workflows/: calendar-mcp-server.json
docs/: ACCESS_CONTROL.md  AUDIO_CAPTURE_4MIC.md  DEPLOYMENT.md  DYNAMIC_KEYWORDS.md  ENVIRONMENT_VARIABLES.md  EXTERNAL_OLLAMA.md  FEATURES.md  FRONTEND_FIXES.md  LLM_MODEL_GUIDE.md  MULTILANGUAGE.md  OUTPUT_ROUTING.md  PROACTIVE_NOTIFICATIONS.md  PROACTIVE_SCHEDULING_TEMPLATES.md  PROJECT_OVERVIEW.md  RAG_INTEGRATION_BRIEFING.md  SATELLITE_INSTALLATION_LOG.md  SATELLITE_MONITORING.md  SATELLITE_OTA_UPDATES.md  SECRETS_MANAGEMENT.md  SECURITY.md  SPEAKER_RECOGNITION.md  TECHNICAL_DEBT.md  WAKEWORD_CONFIGURATION.md  kalender-integration-plan.md  mcp-permission-system-plan.md  presence-analytics-plan.md  sip-integration-plan.md
docs/n8n-workflows/: morning-briefing.json
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css
renfield-satellite/: requirements.txt
renfield-satellite/config/: satellite.yaml
renfield-satellite/renfield_satellite/: __init__.py  __main__.py  config.py  satellite.py
renfield-satellite/systemd/: renfield-satellite.service
site/: package-lock.json  package.json  tailwind.config.mjs
site/scripts/: copy-assets.mjs
src/backend/: CONVERSATION_API.md  Dockerfile  Dockerfile.gpu  alembic.ini  main.py  requirements-test.txt  requirements.txt  test_error_handling.py  test_performance.py  test_plugins.py  test_url_encoding.py
src/frontend/: .eslintrc.cjs  Dockerfile  index.html  (+6 more)
tests/: __init__.py  conftest.py
(+455 files in other folders)
