# Renfield - Project Configuration
# =================================

[project]
name = "renfield"
version = "0.1.0"
requires-python = ">=3.11"

# =============================================================================
# Ruff - Linter & Formatter
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src/backend"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "E402",   # module-level import not at top — intentional for conditional/lazy imports
    "B008",   # function call in default argument (FastAPI Depends)
    "B904",   # raise without from inside except — too noisy
    "SIM102", # collapsible-if — readability preference
    "SIM105", # suppressible-exception — readability preference
    "SIM108", # ternary operator — readability preference
    "UP007",  # X | Y union syntax — keep Optional[X] for clarity
    "RUF012", # mutable-class-default — false positives on Pydantic models
    "RUF013", # implicit-optional — gradual migration, too many changes at once
]

[tool.ruff.lint.isort]
known-first-party = ["services", "api", "models", "utils", "integrations", "prompts"]

[tool.ruff.lint.per-file-ignores]
"src/backend/alembic/**" = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
"tests/**" = ["B011", "SIM300"]

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow tests",
    "database: Tests requiring database",
    "backend: Backend-specific tests",
    "frontend: Frontend-specific tests",
    "satellite: Satellite-specific tests",
]

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source = ["src/backend"]
omit = [
    "*/alembic/*",
    "*/conftest.py",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
fail_under = 50  # Conservative start — raise gradually after measuring CI baseline
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
]
